fixed not showing join modal pop-up in home page

--- a/styles/style.css
+++ b/styles/style.css
@@ -122,11 +122,11 @@
 }
 
 .carousel-container {
-  
+  background-color: red;
 }
 
 .carousel-slide {
-  
+  background-color: red;
 }
 
 /* Media Query */
